--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Title</title>
 </head>
 <body>
+    <img src="https://cloudfront-us-east-1.images.arcpublishing.com/infobae/75T5INAIMFB4JDPNZTVAEAI7LE.jpg" alt="">
     <h1>commit</h1>
     <h2>h2</h2>
     <h3>h3</h3>
