--- a/index.html
+++ b/index.html
@@ -6,17 +6,8 @@
     <title>Title</title>
 </head>
 <body>
-    <img src="https://cloudfront-us-east-1.images.arcpublishing.com/infobae/75T5INAIMFB4JDPNZTVAEAI7LE.jpg" alt="">
-    <h1>commit</h1>
-    <h2>h2</h2>
-    <h3>h3</h3>
-    <h4>h4</h4>
-    <h5>h5</h5>
-    <h6>h6</h6>
-    <p>p1</p>
-    <p>p8</p>
-    <p>p9</p>
-    <p>final</p>
-    <p>algo</p>
+    <h1>Teo</h1>
+    <br>
+    <img src="https://www.directvsports.com/__export/1739535782782/sites/dsports/img/2025/02/14/2-5-scaled.jpg_176766648.jpg" alt="">
 </body>
 </html>
