--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Teo</h1>
-    <br>
-    <img src="https://www.directvsports.com/__export/1739535782782/sites/dsports/img/2025/02/14/2-5-scaled.jpg_176766648.jpg" alt="">
+    <center>
+        <h1>Teo</h1>
+        <br>
+        <img src="https://www.directvsports.com/__export/1739535782782/sites/dsports/img/2025/02/14/2-5-scaled.jpg_176766648.jpg" alt="">
+    </center>
 </body>
 </html>
